fixed typos and capitalized languages

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-01 21:25+0100\n"
+"POT-Creation-Date: 2018-12-03 22:47+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -1083,8 +1083,8 @@ msgstr "Akými jazykmi sa hovorí?"
 
 #: templates/faq.html:53
 msgid ""
-"Talks will be mostly in english and slovak language. Possibly we will "
-"have a few talks in czech language. If you do not speak slovak or czech "
+"Talks will be mostly in English and Slovak language. Possibly we will "
+"have a few talks in Czech language. If you do not speak slovak or czech "
 "do not worry, we have two tracks so there will be allways talk in "
 "english."
 msgstr ""
@@ -1093,8 +1093,8 @@ msgstr ""
 
 #: templates/faq.html:56
 msgid ""
-"Volunteers do speak english. In slovakia there is mandatory second "
-"language in school so most of the attendees will speak english or other "
+"Volunteers do speak English. In Slovakia there is mandatory second "
+"language in school so most of the attendees will speak English or other "
 "language (at least a little bit)."
 msgstr ""
 "Dobrovoľníci hovoria po anglicky. Na Slovensku je povinná výuka anglického "
@@ -1238,8 +1238,8 @@ msgstr ""
 
 #: templates/faq.html:186
 msgid ""
-"On Saturday we'll have an official conference dinner! There is a speacial"
-" ticket for this event."
+"On Saturday we'll have an official conference dinner! There is a special "
+"ticket for this event."
 msgstr ""
 "V sobotu budeme mať oficiálnu konferenčnú večeru! Na túto udalosť je "
 "potrebné kúpiť si samostatný lístok."
@@ -1253,8 +1253,8 @@ msgid ""
 "YES. You don't have to purchase a ticket for the FRIDAY unofficial party."
 " In the pub everybody pays for themself."
 msgstr ""
-"ÁNO. Na PIATKOVÚ neoficiálnu párty si nepotrebuješ kupovať lístok. V pube "
-"však každý platí za seba."
+"ÁNO. Na PIATKOVÚ neoficiálnu párty si nepotrebuješ kupovať lístok. V pube"
+" však každý platí za seba."
 
 #: templates/faq.html:212
 msgid ""
@@ -1270,8 +1270,8 @@ msgid ""
 "(official social event). Ticket to the dinner includes dinner in a form "
 "of a buffet and a welcome drink. You pay for all other drinks."
 msgstr ""
-"NIE. NA SOBOTNÚ konferenčnú večeru (oficiálny spoločenský event) si musíš "
-"kúpiť lístok. Vstupenka na večeru zahŕňa večeru formou bufetu a welcome "
+"NIE. NA SOBOTNÚ konferenčnú večeru (oficiálny spoločenský event) si musíš"
+" kúpiť lístok. Vstupenka na večeru zahŕňa večeru formou bufetu a welcome "
 "drink. Ďalšie drinky si platí každý sám."
 
 #: templates/index.html:20
@@ -2625,14 +2625,4 @@ msgstr ""
 "title=\"stránky mesta pre návštevníkov\" target=\"_blank\" "
 "class=\"external\">oficiálne stránky mesta, určené pre návštevníkov</a>, "
 "kde nájdete aj iné udalosti, ktoré sa práve odohrávajú v Bratislave."
-
-#~ msgid "PyCon SK 2019 website redesign."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "We have launched new design of the"
-#~ " conference website. How do you like"
-#~ " it? Let us know on our social"
-#~ " networks."
-#~ msgstr ""
 
