--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-01 21:25+0100\n"
+"POT-Creation-Date: 2018-12-03 22:47+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -901,16 +901,16 @@ msgstr ""
 
 #: templates/faq.html:53
 msgid ""
-"Talks will be mostly in english and slovak language. Possibly we will "
-"have a few talks in czech language. If you do not speak slovak or czech "
+"Talks will be mostly in English and Slovak language. Possibly we will "
+"have a few talks in Czech language. If you do not speak slovak or czech "
 "do not worry, we have two tracks so there will be allways talk in "
 "english."
 msgstr ""
 
 #: templates/faq.html:56
 msgid ""
-"Volunteers do speak english. In slovakia there is mandatory second "
-"language in school so most of the attendees will speak english or other "
+"Volunteers do speak English. In Slovakia there is mandatory second "
+"language in school so most of the attendees will speak English or other "
 "language (at least a little bit)."
 msgstr ""
 
@@ -1021,8 +1021,8 @@ msgstr ""
 
 #: templates/faq.html:186
 msgid ""
-"On Saturday we'll have an official conference dinner! There is a speacial"
-" ticket for this event."
+"On Saturday we'll have an official conference dinner! There is a special "
+"ticket for this event."
 msgstr ""
 
 #: templates/faq.html:196
