updated texts and translations

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-04 00:03+0100\n"
+"POT-Creation-Date: 2018-12-04 00:16+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -1084,12 +1084,11 @@ msgstr "Akými jazykmi sa hovorí?"
 #: templates/faq.html:53
 msgid ""
 "Talks will be mostly in English and Slovak language. Possibly we will "
-"have a few talks in Czech language. If you do not speak slovak or czech "
-"do not worry, we have two tracks so there will be allways talk in "
-"english."
+"have a few talks in Czech language. If you do not speak Slovak or Czech "
+"do not worry, we have two tracks so there will be always talk in English."
 msgstr ""
-"Väčšina prednášok bude v anglickom a slovenskom jazyku. Je možné, že"
-"niekoľko predášok môže byť aj v češtine."
+"Väčšina prednášok bude v anglickom a slovenskom jazyku. Je možné, "
+"že niekoľko prednášok môže byť aj v češtine."
 
 #: templates/faq.html:56
 msgid ""
@@ -1146,9 +1145,9 @@ msgid ""
 "tickets to you by email."
 msgstr ""
 "Z tohto dôvodu akceptujeme aj bankový prevod. Tento spôsob platby však "
-"vyžaduje manuálne spracovanie, preto môže dôjsť k malému zdržaniu. Napíšte "
-"nám, o aké lístky máte záujem, my vám zašleme variabilný symbol a po "
-"pripísaní sumy na náš účet vám vystavíme a pošleme emailom vstupenku."
+"vyžaduje manuálne spracovanie, preto môže dôjsť k malému zdržaniu. "
+"Napíšte nám, o aké lístky máte záujem, my vám zašleme variabilný symbol a"
+" po pripísaní sumy na náš účet vám vystavíme a pošleme emailom vstupenku."
 
 #: templates/faq.html:104
 msgid ""
