--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-04 00:03+0100\n"
+"POT-Creation-Date: 2018-12-04 00:16+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -902,9 +902,8 @@ msgstr ""
 #: templates/faq.html:53
 msgid ""
 "Talks will be mostly in English and Slovak language. Possibly we will "
-"have a few talks in Czech language. If you do not speak slovak or czech "
-"do not worry, we have two tracks so there will be allways talk in "
-"english."
+"have a few talks in Czech language. If you do not speak Slovak or Czech "
+"do not worry, we have two tracks so there will be always talk in English."
 msgstr ""
 
 #: templates/faq.html:56
