Added Poster Session info text

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-19 20:49+0100\n"
+"POT-Creation-Date: 2018-12-20 07:58+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -247,8 +247,9 @@ msgid ""
 "45-minute slots for important topics that promise to benefit from a more "
 "extensive treatment."
 msgstr ""
-"Väčšina prednášok má dĺžku 30 minút, ale ponúkame aj 45 minútový vstup "
-"pre zaujímavé témy, ktoré budú vyžadovať dlhší vstup."
+"Väčšina prednášok má vyhradenú dĺžku 30 minút, no ponúkame aj niekoľko 45"
+" minútových vstupov pre významné témy, ktorým väčší rozsah umožní lepšie "
+"priblížiť danú tému publiku."
 
 #: templates/cfp.html:63
 msgid "Workshops"
@@ -271,6 +272,20 @@ msgstr ""
 #: templates/cfp.html:74 templates/cfp_form.html:116
 msgid "Poster"
 msgstr "Poster"
+
+#: templates/cfp.html:76
+msgid ""
+"Are you involved in an interesting project, new service or application of"
+" technology? We would like to see your talk but if you - for any reason -"
+" prefer not to talk in large auditorium or you think your achievements "
+"are of limited interest and therefore not suitable for general audience "
+"why not present what you are doing in PyCon SK Poster Session?"
+msgstr ""
+"Pracuješ na zaujímavom projekte, novej službe či technologickej "
+"aplikácii? Radi by sme videli tvoju prednášku, ale ak z nejakého dôvodu "
+"nechceš prednášať vo veľkom auditóriu alebo si myslíš, že tvoja téma "
+"zaujme iba obmedzený počeť ľudí a nie je vhodná pre všeobecné publikum, "
+"prǐď nám ukázať, čo robíš, na PyCon SK Poster Session."
 
 #: templates/cfp.html:84 templates/cfp_form.html:272
 msgid "Recording release"
