--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-19 20:49+0100\n"
+"POT-Creation-Date: 2018-12-20 07:58+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -237,6 +237,15 @@ msgstr ""
 
 #: templates/cfp.html:74 templates/cfp_form.html:116
 msgid "Poster"
+msgstr ""
+
+#: templates/cfp.html:76
+msgid ""
+"Are you involved in an interesting project, new service or application of"
+" technology? We would like to see your talk but if you - for any reason -"
+" prefer not to talk in large auditorium or you think your achievements "
+"are of limited interest and therefore not suitable for general audience "
+"why not present what you are doing in PyCon SK Poster Session?"
 msgstr ""
 
 #: templates/cfp.html:84 templates/cfp_form.html:272
